# programming-styles

./: .gitignore  CMakeLists.txt  README.md
include/: monolithic.h  style.h
src/: CMakeLists.txt  main.cc  monolithic.cc
tests/: CMakeLists.txt  tears_in_rain.txt  tears_in_rain_stop_words.txt  test_tears_in_rain.cc
